--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "tailwind-merge": "^3.4.0",
-    "zero-connector": "^1.1.0"
+    "zero-connector": "^1.1.0",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
