--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -2,13 +2,13 @@
 nixPkgs = ["nodejs-20_x", "npm-10_x"]
 
 [phases.install]
-cmds = ["npm ci"]
+cmds = ["cd whistlechain && npm ci"]
 
 [phases.build]
-cmds = ["npm run build"]
+cmds = ["cd whistlechain && npm run build"]
 
 [start]
-cmd = "npm start"
+cmd = "cd whistlechain && npm start"
 
 [variables]
 NODE_ENV = "production"
